Add preview scrolling and preloade with limit for it

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<div class="album-bar">
 			<div class="album-bar__container">
 				<div class="search">
-					<input  class="search__input" type="edit">
+					<input  class="search__input" value="nznz2" type="edit">
 					<button class="search__btn">ИСКАТЬ</button>
 				</div>
 				<div class="album-bar__items">
