--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
 	</script>
 
 	<script class="templates preview-bar__container-item-templ" type="templ/html">
-		<img class="preview-bar__item" src="{{src}}" width="75" height="75">
+		<div class="preview-bar__border">
+			<div style="position:absolute;left:17px;top:17px;">{{preloader}}</div>
+			<img data-id="{{id}}" class="preview-bar__item" src="{{src}}" width="75" height="75">
+		</div>
 	</script>
 
 
@@ -47,7 +50,7 @@
 			<span class="container__arrow-left"></span>
 			<span class="container__arrow-right"></span>
 			<div class="container__image">
-				<div class="container__image-current"></div>
+				<div class="container__image-current">current</div>
 				<div class="container__image-prev"></div>
 				<div class="container__image-next"></div>
 			</div>
