--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<script class="templates preview-bar__container-item-templ" type="templ/html">
 		<div class="preview-bar__border">
 			<div style="position:absolute;left:17px;top:17px;">{{preloader}}</div>
-			<img data-src="{{origin}}" data-id="{{id}}" class="preview-bar__item" src="{{src}}" width="75" height="75">
+			<img data-index="{{index}}" data-src="{{origin}}" data-id="{{id}}" class="preview-bar__item" src="{{src}}" width="75" height="75">
 		</div>
 	</script>
 
@@ -49,9 +49,10 @@
 			<span class="container__arrow-left"></span>
 			<span class="container__arrow-right"></span>
 			<div class="container__image">
-				<div class="container__image-current">current</div>
-				<div class="container__image-prev"></div>
-				<div class="container__image-next"></div>
+				<div class="container__image-current">
+					<div class="container__image-prev"></div>
+					<div class="container__image-next"></div>
+				</div>
 			</div>
 		</div>
 
@@ -61,7 +62,7 @@
 		<div class="preview-bar__bg">asdasd</div>
 		<div class="preview-bar_wrapp">
 			<div class="preview-bar__container">
-				<!-- Template -->
+
 			</div>
 		</div>
 	</div>
