Add arrows and slide realisation. Small fix scroll listeners

--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
 		</div>
 
 		<div class="container">
-			<span class="container__arrow-left"></span>
-			<span class="container__arrow-right"></span>
+			<div class="cnts">
+				<button class="left"></button>
+				<button class="right"></button>
+			</div>
 			<div class="container__image">
 				<div class="container__image-current">
 					<div class="container__image-prev"></div>
