Small fixes and styling

--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 	<head>
 		<title>Gallery | Tikvach Alexander</title>
-		<meta charset="utf-8">
+		<meta charset="utf-8" />
 
 		<link rel="stylesheet" type="text/css" href="css/common.css">
 
         <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
         <script type="text/javascript" src="js/core.js"></script>
         <script type="text/javascript" src="js/gallery.js"></script>
+
+
 	</head>
 <body>
 
