Add linit for max height large image

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
 
 		<link rel="stylesheet" type="text/css" href="css/common.css">
 
-        <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+		<!-- 1.9 all work but dont JSONP handling -->
+        <!--<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>-->
+
+        <!-- 2.x pre support JSONP Handling -->
+        <script type="text/javascript" src="http://code.jquery.com/jquery-git2.js"></script>
+
         <script type="text/javascript" src="js/core.js"></script>
         <script type="text/javascript" src="js/gallery.js"></script>
 
