--- a/index.html
+++ b/index.html
@@ -3,19 +3,17 @@
 	<head>
 		<title>Gallery | Tikvach Alexander</title>
 		<meta charset="utf-8" />
-
 		<link rel="stylesheet" type="text/css" href="css/common.css">
 
-		<!-- 1.9 all work but dont JSONP handling -->
+		<!-- 1.9 jq all work but JSONP error handling not supported-->
         <!--<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>-->
 
-        <!-- 2.x pre support JSONP Handling -->
-        <script type="text/javascript" src="http://code.jquery.com/jquery-git2.js"></script>
+        <!-- 2.x pre jq - support JSONP error Handling -->
+        <script type="text/javascript" src="js/jquery-git2.js"></script>
 
+        
         <script type="text/javascript" src="js/core.js"></script>
         <script type="text/javascript" src="js/gallery.js"></script>
-
-
 	</head>
 <body>
 
@@ -53,7 +51,7 @@
 		</div>
 
 		<div class="container">
-			<div class="cnts">
+			<div class="container__arrows">
 				<button class="left"></button>
 				<button class="right"></button>
 			</div>
@@ -71,7 +69,7 @@
 		<div class="preview-bar__bg">asdasd</div>
 		<div class="preview-bar_wrapp">
 			<div class="preview-bar__container">
-
+				<!-- Template -->
 			</div>
 		</div>
 	</div>
